fix mobile white space bug

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -12,6 +12,10 @@ html[offcanvas="true"] {
     overflow-y: clip;
 }
 
+html, body {
+    overflow-x:hidden;
+}
+
 .offcanvas-padding {
     padding-right: 6px;
 }
